<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:id="@+id/svUserInfoForm"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_side_margin"
            android:layout_marginRight="@dimen/login_form_side_margin"
            android:background="@drawable/bg_form"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/local_signup_form_header"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ts_text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/your_account_safe"
                android:textColor="@color/gray_dark"
                android:textSize="@dimen/ts_text_small" />

            <com.brainSocket.socialrosary.views.FButton
                android:id="@+id/btnFBLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="18dp"
                android:drawableLeft="@drawable/com_facebook_inverse_icon"
                android:paddingBottom="8dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="8dp"
                android:text="@string/login_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_text_normal"
                fbutton:buttonColor="@color/blue_facebook"
                fbutton:cornerRadius="8dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="2dp" />
            
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/or"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_title_xbig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_form_input_margin"
            android:layout_marginRight="@dimen/login_form_input_margin"
            android:background="@drawable/bg_form"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="20dp" >

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_form_input_margin"
                android:layout_marginRight="@dimen/login_form_input_margin"
                android:layout_marginTop="15dp"
                android:hint="@string/prompt_uesrname"
                android:textColorHint="@android:color/black"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingRight="5dp"
                    android:text="@string/is_male"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/ts_title_small" />

                <CheckBox
                    android:id="@+id/chkGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <com.brainSocket.socialrosary.views.FButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="8dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:paddingTop="8dp"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_text_normal"
                fbutton:buttonColor="@color/btn_color2"
                fbutton:cornerRadius="8dp"
                fbutton:shadowEnabled="true"
                fbutton:shadowHeight="2dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>