<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/login_form_side_margin"
    android:layout_marginRight="@dimen/login_form_side_margin"
    android:layout_marginTop="-30dp"
    android:background="@drawable/bg_form"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="25dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/enter_phoen_num_header"
        android:textColor="@color/black_light" />

    <EditText
        android:id="@+id/etPhoneNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_form_input_margin"
        android:layout_marginRight="@dimen/login_form_input_margin"
        android:layout_marginTop="15dp"
        android:hint="@string/prompt_email"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <com.brainSocket.socialrosary.views.FButton
            android:id="@+id/btnEnterPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="8dp"
            android:text="@string/action_sign_in_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_text_normal"
            fbutton:buttonColor="@color/btn_color1"
            fbutton:cornerRadius="8dp"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="2dp" />
    </LinearLayout>

</LinearLayout>