<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <RelativeLayout
        android:id="@+id/rlTutStage1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.brainSocket.socialrosary.views.TextViewCustomFont
            android:id="@+id/tvTut1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tut_desc1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_text_big"
            app:fontId="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:layout_below="@+id/tvTut1"
            android:padding="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/img_tut_1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTutStage2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.brainSocket.socialrosary.views.TextViewCustomFont
            android:id="@+id/tvTut2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tut_desc2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_text_big"
            app:fontId="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:layout_below="@+id/tvTut2"
            android:padding="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/img_tut_2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlTutStage3"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.brainSocket.socialrosary.views.TextViewCustomFont
            android:id="@+id/tvTut3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_horizontal"
            android:text="@string/tut_desc3"
            android:textColor="@android:color/black"
            android:textSize="@dimen/ts_text_big"
            app:fontId="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:layout_below="@+id/tvTut3"
            android:padding="0dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="fitEnd"
            android:src="@drawable/img_tut_3" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivBtnNext"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="20dp"
        android:layout_centerVertical="true"
        android:src="@drawable/btn_tut_next" />

</RelativeLayout>