<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/vSegmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.brainSocket.socialrosary.views.TextViewCustomFont
            android:id="@+id/tvSegment1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_seg_l_active"
            android:gravity="center"
            android:text="@string/main_seg1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_text_normal"
            app:fontId="1" />

        <com.brainSocket.socialrosary.views.TextViewCustomFont
            android:id="@+id/tvSegment2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_seg_r"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/main_seg2"
            android:textColor="@android:color/white"
            app:fontId="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@id/vSegmentView"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/RlSegment1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.brainSocket.socialrosary.views.TextViewCustomFont
                android:id="@+id/tvHadeeth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:text="@string/main_hadeeth_temp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ts_text_big"
                app:fontId="1" />

            <ImageView
                android:id="@+id/ivPlant"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:src="@drawable/img_rose1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RlSegment2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" >

            <com.brainSocket.socialrosary.views.EditTextCustomFont
                android:id="@+id/etFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_text_big" />

            <ListView
                android:id="@+id/lvContacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/etFilter"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="0dp"
                tools:listitem="@layout/row_conversation" >
            </ListView>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/btnStartSelfTask"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="right|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"
        android:src="@drawable/btn_self_task" />

</RelativeLayout>